# CandidateFlow

./: README.md
candidate-flow-main/: README.md
candidate-flow-main/backend/: main.py  pyproject.toml  requirements.txt
candidate-flow-main/backend/app/: __init__.py
candidate-flow-main/backend/app/adapters/: __init__.py  ats_json_adapter.py  csv_adapter.py  github_adapter.py  notes_adapter.py  resume_adapter.py
candidate-flow-main/backend/app/api/: dependencies.py  main.py  router.py  schemas.py
candidate-flow-main/backend/app/confidence/: __init__.py  aggregation.py  models.py  scorer.py  strategies.py
candidate-flow-main/backend/sample_datasets/: README.md
candidate-flow-main/backend/sample_inputs/: module_01_candidate_fragment.json  module_02_ats.json  module_02_notes.txt  module_02_recruiter.csv  module_03_fragment.json  module_04_candidate_for_validation.json  module_05_extracted_values.json  module_06_fragments.json  module_08a_projection_config.json
candidate-flow-main/backend/sample_outputs/: module_01_candidate_model.json  module_02_fragments.json  module_03_extractions.json  module_04_validation_results.json  module_05_normalized_values.json  module_06_merge_result.json  module_08a_projected_candidate.json
candidate-flow-main/backend/tests/: test_adapters.py  test_api.py  test_cli.py  test_confidence_7b.py  test_confidence_models.py  test_consensus_merger.py  test_e2e_integration.py  test_extractors.py  test_github_adapter.py  test_merger.py  test_models.py  test_normalizers.py  test_projection.py  test_provenance_builder.py  test_validators.py
(+76 files in other folders)
